luigid/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: luigid-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: luigid-service
          servicePort: 8080
